# Computaci-n-Gr-fica--Remeshing

./: README.md  backend.js
Backend/: backend.js
FrontEnd/: App.vue  angle-visualizer.vue  index.html  package-lock.json  package.json  vite.config.js
FrontEnd/src/: main.js
FrontEnd/src/components/: Introduccion.vue  Modelo1.vue  Modelo2.vue  Visualizador.vue
QEM/: CMakeLists.txt  main.cpp
QEM/source/: Remeshing.cpp  Remeshing.h  edge.cpp  edge.h  edgeHeap.cpp  edgeHeap.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
Voronoi/: CMakeLists.txt  main.cpp
Voronoi/source/: AdaptiveRemesher.cpp  AdaptiveRemesher.h  AnisoQuadRemesher.cpp  AnisoQuadRemesher.h  AnisoRemesher.cpp  AnisoRemesher.h  IRemesher.h  UniformRemesher.cpp  UniformRemesher.h  utils.h  vectores.cpp  vectores.h
Voronoi/source/clustering/: VCCluster.h  VCClusterAniso.h  VCClusterAnisoQuad.h  VCClusterQuad.h  VCEdge.h  VCFace.h  VertexClustering.h
